--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://mustafasencer.github.io/Sorting-Visualizer-Tutorial/">
+<meta http-equiv="refresh" content="0; url=https://mustafasencer.github.io/Sorting-Visualizer-Tutorial/public/index.html">
