--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<meta http-equiv="refresh" content="0; url=https://mustafasencer.github.io/Sorting-Visualizer-Tutorial/public/index.html">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="refresh" content="0; url=https://mustafasencer.github.io/Sorting-Visualizer-Tutorial/public/index.html">
+    <meta charset="UTF-8">
+    <title>Sorting Visualizer</title>
+</head>
+<body>
+
+</body>
+</html>
